--- a/legends of rock/css/app.css
+++ b/legends of rock/css/app.css
@@ -32,10 +32,57 @@ h1, h2, h3, h4, h5, h6, button {
 }
 
 #submenu-container {
-   border: 0;//eliminacion del borde
+   border: 0;/*eliminacion del borde*/
 }
 
 #submenu-container li a{
   background-color: #48a19d;
   color: white;
+}
+
+#Tickets-action .callout {
+  background: #5e7eb7;
+  color: white;
+  margin-bottom: 0;
+}
+
+#Tickets-action .button {
+  color: white;
+  border: 1px solid white;
+}
+
+#lineup-container {
+  padding-bottom: 1em 0;
+}
+
+#lineup-container,
+#lineup-container .tabs-panel,
+#lineup-container,  .tabs,
+#lineup-container, .tabs .tabs-title.is-active a {
+background-color: #9676af;
+color: white;
+
+border: 0;
+text-transform: uppercase; /*mayusculas*/
+font-family: 'Bree Serif', serif;
+}
+
+.tabs-content {
+  border: 0;
+}
+
+#lineup-container .tabs .tabs-title a {
+  font-size: 18px;
+  color: #a7fffb;
+
+}
+
+#lineup-container .tabs .tabs-title a:hover {
+  color: white;
+  background-color: #9676af;
+}
+
+.tabs-title { /*fondation no permite centrar los tabs-title, po eso aplicamos en css*/
+  display: inline-block;
+  float: none;
 }
