--- a/legends of rock/css/app.css
+++ b/legends of rock/css/app.css
@@ -14,7 +14,7 @@ body {
   margin-bottom: 0;
 }
 
-h1, h2, h3, h4, h5, h6, button {
+h1, h2, h3, h4, h5, h6, button, input[type="submit"] {
   font-family: 'Bree Serif', serif;
 }
 
@@ -105,4 +105,20 @@ font-family: 'Bree Serif', serif;
 .pricing-table {
   border: 1px solid #161742;
   font-family: 'Ravi Prakash', cursive;
+}
+
+#info-container {
+  background-color: #161742;
+  color: white;
+  padding: 1em 0;
+}
+
+#suscribete-container {
+  background-color: #ee3f54;
+  color: white;
+  padding: 1em;
+}
+
+#suscribete-container h4 small {
+  color: #ffcddc;
 }
