Seguimiento de menu
Se utilizo el apartado data-sticky-container, de fondation para hacer que el menu nos siga mediante navegamos en la paguina.

--- a/legends of rock/css/app.css
+++ b/legends of rock/css/app.css
@@ -131,3 +131,7 @@ font-family: 'Bree Serif', serif;
   background-color: rgb(255,228,288);
   border-color: rgb(255,228,228);
 }
+
+.data-sticky {
+  z-index: 100;
+}
