--- a/legends of rock/css/app.css
+++ b/legends of rock/css/app.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6, button, input[type="submit"] {
 #menu-container li a {
   color: white;
   font-family: 'Bree Serif', serif;
+  text-transform: uppercase;
 }
 
 #menu-container li a:hover {
@@ -134,4 +135,11 @@ font-family: 'Bree Serif', serif;
 
 .data-sticky {
   z-index: 100;
+}
+
+#offCanvas,
+#offCanvas li a {
+  background-color: black;
+  color: white;
+  font-family: 'Bree Serif', serif;
 }
