--- a/legends of rock/css/app.css
+++ b/legends of rock/css/app.css
@@ -143,3 +143,11 @@ font-family: 'Bree Serif', serif;
   color: white;
   font-family: 'Bree Serif', serif;
 }
+
+#offCanvas .is-drilldown-submenu-parent > a::after {
+  border-color: transparent transparent transparent white;
+}
+
+#offCanvas .drilldown .js-drilldown-back > a::before {
+  border-color:  transparent white;
+}
